prusti/tests/pass/parse/implies_fail.stderr
error: expected Prusti assertion
 --> $DIR/implies_fail.rs:7:17
  |
7 | #[requires(true ==>)]
  |                 ^^^

error: expected Prusti assertion
  --> $DIR/implies_fail.rs:10:12
   |
10 | #[requires(==> true)]
   |            ^^^

error: `==>` cannot be part of Rust expression
  --> $DIR/implies_fail.rs:13:18
   |
13 | #[requires((true ==> true) || true)]
   |                  ^^^

error: aborting due to 3 previous errors

